--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         on being an inquirer 
         and risk-taker. I am good in math,UOI and gym and need to improve on my language and music. I have 
         good problem solving capabilities and I can provide many ideas for developing a project
+
+        I created this website using html and css I hope you like it (Mritunjai)
     </section>
 </body>
 
