--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <img src="pic.jpg" class="center">
         Hi everyone! I'm Mritunjai and I'm currently studying in St.Judes Academy.
         My favorite subjects are both maths and science,and my favorite
-        hobby is to code games but sadly none of them get popular.
-        Still I always keep working and try my best because I want to become
+        hobby is to code games but they have not become popular yet.
+        Still I always keep working and trying my best because I want to become
         an entrepreneur so I can earn enough money from my game and jump start my business.
     </section>
     <section id="whyIB">
@@ -25,15 +25,15 @@
         I created a game on roblox called Scary Monster. It's a game were you have to get into a car 
         to escape the Monsters and get a sword to kill them
         before they kill you.But the bad thing about my game is that
-        the monsters kill each other and the weapons are to big. You can take a sneak peak at 
-        <a href="https://web.roblox.com/games/12506311337/SCary-MOnster" class="img">SCary-MOnster</a>   
+        the monsters kill each other and the weapons are too big. You can take a sneak peak at 
+        <a href="https://web.roblox.com/games/12506311337/SCary-MOnster" class="img">SCary-MOnster</a> .  
     </section>
     <section id="personality">
         Although my passion is gaming and coding,I like to try different things. I like learning about EV cars 
         and I am into competitive swimming,
         chess,karate and also I am finishing my first level in piano.  I also love acting in plays and I played Timon 
         in Lion King last year.
-        I am mostly happy and funny person. I entertain other people at recess, make people happy when their sad
+        I am mostly happy and funny person. I entertain other people at recess, make people happy when they are sad
         and also help them with questions,projects,and even studying for exams or tests.
     </section>
     <section id="contribution">
@@ -42,9 +42,9 @@
         with other people when we have group projects and present them to a wider audience.I need to improve
         on being an inquirer 
         and risk-taker. I am good in math,UOI and gym and need to improve on my language and music. I have 
-        good problem solving capabilities and I can provide many ideas for developing a project
+        good problem solving capabilities and I can provide many ideas for developing a project.
 
-        I created this website using html and css I hope you like it (Mritunjai)
+        I created this website from scratch using html and css I hope you like it.
     </section>
 </body>
 
